--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     </head>
     <body>
         <h2>Register Page</h2>
+        <h3>Changes</h3>
         <div class="container">
             <form>
                 <div>
